[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/anima/nodes/AnimationControl.gd" type="Script" id=1]
[ext_resource path="res://addons/anima/ui/AnimationsWindow.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/anima/ui/PropertiesWindow.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/anima/fonts/Lato-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://addons/anima/ui/AnimationData.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 18
use_filter = true
font_data = ExtResource( 4 )

[node name="AnimationControl" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 592.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_right = 1008.0
margin_bottom = 4.0

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 8.0
margin_right = 1008.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.501961 )
text = "Time:"
align = 1

[node name="GridContainer2" type="GridContainer" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 1008.0
margin_bottom = 90.0
custom_constants/vseparation = 8
custom_constants/hseparation = 12
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/GridContainer2"]
margin_top = 1.0
margin_right = 120.0
margin_bottom = 23.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = SubResource( 1 )
text = "duration (s):"

[node name="Duration" type="LineEdit" parent="VBoxContainer/GridContainer2"]
margin_left = 132.0
margin_right = 1008.0
margin_bottom = 24.0
size_flags_horizontal = 3
align = 2

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer2"]
margin_top = 33.0
margin_right = 120.0
margin_bottom = 55.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = SubResource( 1 )
text = "delay (s):"

[node name="Delay" type="LineEdit" parent="VBoxContainer/GridContainer2"]
margin_left = 132.0
margin_top = 32.0
margin_right = 1008.0
margin_bottom = 56.0
hint_tooltip = "Use a negative value to anticipate the start time of this animation."
size_flags_horizontal = 3
align = 2

[node name="AnimationData" parent="VBoxContainer" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 94.0
margin_right = 1008.0
margin_bottom = 458.0

[node name="PropertiesWindow" parent="." instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0 )
rect_pivot_offset = Vector2( 504, 292 )

[node name="AnimationsWindow" parent="." instance=ExtResource( 2 )]

[connection signal="select_animation" from="VBoxContainer/AnimationData" to="." method="_on_AnimationData_select_animation"]
[connection signal="select_property" from="VBoxContainer/AnimationData" to="." method="_on_AnimationData_select_property"]
[connection signal="value_updated" from="VBoxContainer/AnimationData" to="." method="_on_AnimationData_value_updated"]
[connection signal="property_selected" from="PropertiesWindow" to="." method="_on_PropertiesWindow_property_selected"]
[connection signal="animation_selected" from="AnimationsWindow" to="." method="_on_AnimationsWindow_animation_selected"]
